# jail-mcp

./: .gitignore  .mcp.json  LICENSE  Makefile  README.md  index.js  package-lock.json  package.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
skills/: SKILL.md
src/jail_mcp/: __init__.py
